buildscript {
	repositories {
		mavenCentral()
	}

	dependencies {
		classpath 'org.ajoberstar:grgit:1.1.0'
	}
}

plugins {
	id 'java'
	id 'application'
	id 'distribution'
	id 'fr.brouillard.oss.gradle.jgitver' version '0.8.0'
}

jgitver {
	useDistance true
	useGitCommitID true
	useDirty true
	autoIncrementPatch false
}

repositories {
	mavenCentral()
}

mainClassName = 'au.org.rcc.ResourceServerApplication'

sourceCompatibility = 1.8
targetCompatibility = 1.8
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

dependencies {
	implementation group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.12.1'

	/* Spring dependencies */
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.2.1.RELEASE'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.1.RELEASE'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '+'
	implementation(group: 'org.springframework.security', name: 'spring-security-taglibs', version: '+') {
		/* Appears to conflict with OAuth2 */
		exclude group: 'org.springframework.security', module: 'spring-security-acl'
	}
	implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.2.4.RELEASE'
	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '+'

	/* Apache Commons Configuration dependencies */
	implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '+'
	implementation group: 'commons-collections', name: 'commons-collections', version: '+'
	implementation group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
	implementation group: 'commons-jxpath', name: 'commons-jxpath', version: '1.3'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
	implementation group: 'commons-io', name: 'commons-io', version: '2.4'
	implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'

	/* Bouncycastle */
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.52'
	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.52'

	/* Apache commons codec */
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
	implementation group: 'com.google.guava', name: 'guava', version: '18.0'
	implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
	implementation group: 'org.springframework', name: 'spring-jdbc', version: '+'
	implementation group: 'com.h2database', name: 'h2', version: '+'
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'

	testImplementation 'junit:junit:4.12'


	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.2.1.RELEASE'
	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '+'
	implementation group: 'com.hubspot.jinjava', name: 'jinjava', version: '2.5.1'
}

distributions {
	main {
		baseName 'resource-server'
		distZip.enabled false
	}
}

distTar {
	compression Compression.GZIP
	extension 'tar.gz' /* Not .tgz */
}